--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "vue": "^3.2.25",
+    "vue-picture-input": "^2.4.0",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
